# syntest-lib

./: .gitignore  AGENT_NAMES.md  API_CREDENTIALS_GUIDE.md  API_DEBUG_GUIDE.md  BULK_STATUS_CHANGE_GUIDE.md  CSV_GUIDE.md  CSV_IMPLEMENTATION_SUMMARY.md  DELETE_MODE_GUIDE.md  DNS_PORT_FIX.md  DNS_PORT_FIX_QUICKREF.md  ENHANCEMENT_SUMMARY.md  EXPORT_TESTS_GUIDE.md  FINAL_LINTING_RESOLUTION.md  GITHUB_SETUP_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  KENTIK_NMS_QUICKSTART.md  LICENSE  LINTING_FIXES_SUMMARY.md  PRIVATE_AGENTS_QUICKREF.md  PYLANCE_FIXES.md  README.md  REDEPLOY_GUIDE.md  SMART_UPDATES.md  agent_names_demo.csv  api_config_examples.py  change_test_status.py  configure_credentials.py  create_labels.py  createtests.py  debug_api.py  debug_dns_grid.py  debug_results.py  deep_debug_dns.py  demo_dns_port_fix.py  dns_grid_tests.csv  enhanced_example_tests.csv  example_agent_names.py  example_dns_grid.py  example_tests.csv  export_tests_to_csv.py  (+17 more)
.github/: copilot-instructions.md
docs/: ENHANCED_TAGS_GUIDE.md  METRICS_REFERENCE.md  results_enrichment.md
examples/: anomaly_detection_example.py  basic_usage.py  csv_management_example.py  enhanced_tags_example.py  enrichment_example.py  export_redeploy_workflow.py  labels_and_sites_example.py  mcp_server_example.py  pause_unpause_tests.py  quick_pause_unpause.py  send_to_kentik_example.py  simple_tests.csv  site_api_compatibility_demo.py  tests_with_optional_fields.csv
src/syntest_lib/: __init__.py  client.py  csv_manager.py  generators.py  label_models.py  models.py  results_enricher.py  site_models.py  utils.py
src/syntest_lib/mcp_server/: QUICKSTART.md  README.md  __init__.py  claude_desktop_config.json  server.py
tests/: test_syntest_lib.py
